--- a/Calculator.html
+++ b/Calculator.html
@@ -13,7 +13,7 @@
 
     <input id="b1" type = "button" value = "(" onclick = "form1.answer.value += '(' ">  
 	<input id="b2" type = "button" value = ")" onclick = "form1.answer.value += ')' ">  
-	<input id="del" type = "button" value = "Delete" onclick = "form1.answer.value=form1.answer.value.slice(0,-1)">  
+	<input id="del" type = "button" value = "D" onclick = "form1.answer.value=form1.answer.value.slice(0,-1)">  
 	<input id="mod" type = "button" value = "%" onclick = "form1.answer.value += '%' ">  
 	<br><br>
 
